apps/smart-home/home-assistant/templates/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: home-assistant
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    name: postgres
