apps/smart-home/home-assistant/templates/ingress-alexa.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-alexa
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: zerossl-production
    kubernetes.io/ingress.class: external
spec:
  tls:
    - hosts:
        - home-assistant.channings.me
      secretName: home-assistant-external-tls
  rules:
    - host: home-assistant.channings.me
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/alexa/smart_home
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
          - pathType: ImplementationSpecific
            path: /auth
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
